--- a/popup.html
+++ b/popup.html
@@ -7,22 +7,22 @@
     </head>
 
     <body>
-        <div id="menu">
+        <div id="menu_saucer">
             <nav>
-                <div id="gridCont">
-                    <a href="history.html" class="mini"><img src="history.png" alt="History" id="historyButton"/></a>
-                    <a href="popup.html" class="mainB selected">SAUCER</a>
-                    <a href="favs.html" class="mini"><img src="fav.png" alt="Favorites" id="favButton"/></a>
+                <div id="gridCont_saucer">
+                    <a href="history.html" class="mini_saucer"><img src="history.png" alt="History" id="historyButton"/></a>
+                    <a href="popup.html" class="mainB_saucer selected_saucer">SAUCER</a>
+                    <a href="favs.html" class="mini_saucer"><img src="fav.png" alt="Favorites" id="favButton"/></a>
                 </div>
             </nav>
         </div>
 
-        <div id="main">
-            <div id="sub">
-                <img id="saucerIcon" src="icon128.png" alt="icon"/>
-                <input id="sauce" type="text" maxlength="6">
-                <button class="btn" id="openSauce" type="button">OPEN SAUCE</button>
-                <button class="btn atf" id="atf" type="button">Add To Favorites</button>
+        <div id="main_saucer">
+            <div id="sub_saucer">
+                <img id="saucerIcon_saucer" src="icon128.png" alt="icon"/>
+                <input id="sauce_saucer" type="text" maxlength="6">
+                <button class="btn_saucer" id="openSauce_saucer" type="button">OPEN SAUCE</button>
+                <button class="btn_saucer atf_saucer" id="atf_saucer" type="button">Add To Favorites</button>
             </div>
         </div>
 
