--- a/favs.html
+++ b/favs.html
@@ -7,17 +7,17 @@
     </head>
 
     <body>
-        <div id="menu">
+        <div id="menu_saucer">
             <nav>
-                <div id="gridCont">
-                    <a href="history.html" class="mini"><img src="history.png" alt="History" id="historyButton"/></a>
-                    <a href="popup.html" class="mainB">SAUCER</a>
-                    <a href="favs.html" class="mini selected"><img src="fav.png" alt="Favorites" id="favButton"/></a>
+                <div id="gridCont_saucer">
+                    <a href="history.html" class="mini_saucer"><img src="history.png" alt="History" id="historyButton_saucer"/></a>
+                    <a href="popup.html" class="mainB_saucer">SAUCER</a>
+                    <a href="favs.html" class="mini_saucer selected_saucer"><img src="fav.png" alt="Favorites" id="favButton_saucer"/></a>
                 </div>
             </nav>
         </div>
 
-        <div id="main">
+        <div id="main_saucer">
 
         </div>
 
